attempting to fix about image stretching on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,6 +195,7 @@
   }
   #headshot {
     max-width: 400px;
+    height: auto;
     float: right;
   }
 /* ~ SKILLS ~ */
